Developed: Improved Html content and CSS styling

--- a/Index.html
+++ b/Index.html
@@ -5,24 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Styles.css">
-    <title>Marioclub by Nitesh</title>
+    <title>Mario website by Nitesh</title>
 </head>
 <body>
     <header>
-        <h1> Home</h1>
+        <h1> MarioGames</h1>
     </header>
     <section class="banner">
         <img src="Image/banner.png" alt="mario club">
         <div class="Welcome"> 
-            <h1>Marios Home<br>-Nitesh Version<br><br>If you’re a Mario fan—or even if you’ve just found out about him today—you’ve come to the right place! Learn everything there is to know about that multitalented, mustached marvel, and check out the latest news, videos, and more.</h1>
+            <h1>Marios Home <br>&nbsp; &nbsp; &nbsp;<span>-Nitesh Version</span><br><br></h1>
+            <p>If you’re a Mario fan—or even if you’ve just found out about him today<br>&nbsp;you’ve come to the right place! <br>&nbsp;Learn everything there is to know about that multitalented, mustached marvel,<br> &nbsp;and check out the latest news, videos, and more.</p>
         </div>
     </section>
    <nav class="main-nav">
     <ul>
-        <li><a href="/join.html" class="join">Join the Club</a></li>
+        <li><a href="/join.html" class="join nav">Join the Club</a></li>
         <li><a href="/News.html"></a>News</li>
         <li><a href="/Games.html"></a>Games</li>
-        <li><a href="/Conact.html"></a>contact</li>
+        <li><a href="/Conact.html"></a>Contact</li>
     </ul>
    </nav>
 <main>
@@ -42,15 +43,15 @@
         <li><img src="Image/thumb-2.png" alt="Mario_image2" </li>
     </ul>
 </main>
-<section class="join>">
+<section class="join">
     <h2>Join Today!</h2>
     <p>You are Mario! It’s up to you to save the Mushroom People from the black magic of the Koopa!</p>
     <form>
-        <input type="email" name="email" placeholder="Type your email like 'abcd@outlook.com' " required>
+        <input type="email" name="email" placeholder="Type your email : 'abcd@outlook.com' " required>
     </form>
 </section>
 <footer>
-    <p class="copyrighht"> Copyright 2022</p>
+    <p class="copyright"> Copyright 2022</p>
 </footer>
 </body>
 </html>
