--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
    <nav class="main-nav">
     <ul>
         <li><a href="/join.html" class="join nav">Join the Club</a></li>
-        <li><a href="/News.html"></a>News</li>
-        <li><a href="/Games.html"></a>Games</li>
-        <li><a href="/Conact.html"></a>Contact</li>
+        <li><a href="/News.html">News</a></li>
+        <li><a href="/Games.html">Games</a></li>
+        <li> <a href="/Conact.html">Contact</a></li>
     </ul>
    </nav>
 <main>
